compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/namedFun.kt
// FIR_IDENTICAL
<!NON_MEMBER_FUNCTION_NO_BODY!>fun bar()<!>
